# local-voice

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md
.github/workflows/: ci.yml  release.yml
src/: audio.rs  cli.rs  config.rs  download.rs  hardware.rs  main.rs  mcp.rs  phonemize.rs  registry.rs
src/engine/: chatterbox.rs  kokoro.rs  mod.rs  piper.rs  supertonic.rs
src/registry/: chatterbox.rs  kokoro.rs  mod.rs  piper.rs  supertonic.rs
