[package]
name = "local-voice"
version = "0.2.0"
edition = "2024"
description = "Local TTS CLI with MCP server — run text-to-speech models locally and expose them to AI agents"
license = "MIT"
repository = "https://github.com/Frenkiee/local-voice"

[[bin]]
name = "local-voice"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
dirs = "6"
futures-util = "0.3"
hound = "3.5"
indicatif = "0.17"
ort = { version = "2.0.0-rc.12", default-features = false, features = ["std", "download-binaries", "tls-native"] }
reqwest = { version = "0.12", features = ["stream"] }
rodio = "0.22"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tokenizers = { version = "0.21", default-features = false, features = ["onig"] }
toml = "0.8"
owo-colors = "4"
dialoguer = "0.11"
ndarray = "0.16"
rand = "0.8"
rand_distr = "0.4"
unicode-normalization = "0.1"
